# c4

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/commands/: autocommit.md  teach.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake
docs/: CHECKPOINT.md
docs/learn/: tcp_http.c  tcp_http_pro.c  tcp_loop.c
docs/plans/: 2026-07-13-project-scaffold.md
docs/specs/: 2026-07-13-project-scaffold-design.md
examples/: CMakeLists.txt  hello.c  tcp.c
include/c4/: app.h  c4.h  request.h  response.h
include/h3/: app.h  h3.h  request.h  response.h
src/: CMakeLists.txt  c4.c  c4.cc  h3.cc  request.cc  response.cc
tests/: CMakeLists.txt  test_hello.c  test_hello.cc
